# lmssh

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_zh.md
.github/workflows/: checks.yml  pull_request.yml  release.yml
docs/plans/: 2026-03-17-lmssh-design.md  2026-03-18-session-router-implementation-plan.md  2026-03-18-ssh-server-glue-implementation-plan.md  2026-03-19-ci-release-design.md  2026-03-19-ci-release-implementation-plan.md
scripts/: is-newer-version.bash
src/: config.rs  error.rs  lib.rs  main.rs  prompt.rs  session.rs  ssh.rs  terminal.rs  vfs.rs
src/ai/: client.rs  types.rs
src/logging/: event.rs  jsonl.rs
src/session/: action.rs  blacklist.rs  executor.rs  mod.rs  output_guard.rs  router.rs  session.rs  state.rs
src/ssh/: hostkey.rs  mod.rs  server.rs
src/terminal/: line_editor.rs
src/vfs/: init_data.rs  side_effects.rs  tree.rs
tests/: ai_request_build.rs  ai_stream_collect.rs  auth_logic.rs  config_full.rs  config_load.rs  line_editor.rs  output_guard.rs  output_guard_integration.rs  queue_semantics.rs  router_ai_request.rs  router_blacklist.rs  router_builtins_basic.rs  router_cd.rs  router_clear.rs  router_history.rs  server_smoke.rs  session_action.rs  session_log_events.rs  sse_parse.rs  ssh_handler_smoke.rs
tests/ci/: checks-workflow-grep.sh  entry-workflows-grep.sh  is-newer-version-test.sh  release-workflow-grep.sh
