[package]
name = "lmssh"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rand_core = "0.6"
russh = { version = "0.45" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh-key = { version = "0.6", features = ["ed25519"] }
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
