[package]
name = "lmssh"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
rand_core = "0.6"
reqwest = { version = "0.12", features = ["json", "stream"] }
russh = { version = "0.45" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh-key = { version = "0.6", features = ["ed25519"] }
thiserror = "2"
eventsource-stream = "0.2.3"
futures-util = "0.3"
tokio = { version = "1", features = ["rt", "macros", "sync"] }
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
